tests/ui/traits/suggest-dereferences/multiple-0.stderr
error[E0277]: the trait bound `&Baz: Happy` is not satisfied
  --> $DIR/multiple-0.rs:34:9
   |
LL |     foo(&baz);
   |     --- ^^^^ the trait `Happy` is not implemented for `&Baz`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `foo`
  --> $DIR/multiple-0.rs:30:26
   |
LL | fn foo<T>(_: T) where T: Happy {}
   |                          ^^^^^ required by this bound in `foo`
help: consider dereferencing here
   |
LL |     foo(&***baz);
   |          +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
